Tank sub adding and css

--- a/code/movierating/templates/addmovie.html
+++ b/code/movierating/templates/addmovie.html
@@ -1,12 +1,14 @@
-{% include "base.html" %}
+{% extends "base.html" %}
 
-<h2>Add a movie to spreadsheet</h2>
+{% block content %}
+    <h2>Add a movie to spreadsheet</h2>
 
-<li>Please check if a movie already exists in spreadsheet</li><br>
-<li>Try to use original name of a movie</li><br>
+    <li>Please check if a movie already exists in spreadsheet</li><br>
+    <li>Try to use original name of a movie</li><br>
 
 
-<form method="POST"> {% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit' value="Save" />
-</form>
+    <form method="POST"> {% csrf_token %}
+        {{ form.as_p }}
+        <input type='submit' value="Save" />
+    </form>
+{% endblock %}
