--- a/code/movierating/templates/moviespreadsheet.html
+++ b/code/movierating/templates/moviespreadsheet.html
@@ -12,7 +12,7 @@
 
 <center>
 <!--    <li><a href="/movierating/addReview">Dodaj recenzje</a></li>-->
-    <li><a href="/movierating/addMovie">Dodaj film</a></li>
+    <a href="/movierating/addMovie"><button >Dodaj film</button></a>
     <li>To add/modify a review click on movie name in table</li>
     <br>
 
