--- a/code/wotwatcher/templates/wot_tanklist.html
+++ b/code/wotwatcher/templates/wot_tanklist.html
@@ -9,6 +9,7 @@
 {% block content %}
 <center>
     <a href="update"><button type="button">Update</button></a>
+    <a href="add"><button type="button">Add tank</button></a>
 <!--    {% for key, value in subs.items %}-->
 <!--        <a href="#{{key}}"><button class="tablinks">{{key}}</button></a>-->
 <!--    {% endfor %}-->
