--- a/code/discordapp/static/playlist_list.css
+++ b/code/discordapp/static/playlist_list.css
@@ -37,3 +37,34 @@ aside {
   font-style: italic;
   background-color: lightgray;
 }
+
+.normal_button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+
+.disabled_button {
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  opacity: 0.6;
+  cursor: not-allowed;
+}
