--- a/code/home/templates/navbar.html
+++ b/code/home/templates/navbar.html
@@ -5,7 +5,7 @@
   <li><a href="{% url 'home:personnel' %}">Personnel</a></li>
   <li><a href="{% url 'movierating:list' %}">Movies Repo</a></li>
   <li><a href="{% url 'wotapi:list' %}">WN8 Tracker</a></li>
-  <li><a href="{% url 'discordapp:index' %}">Discord</a></li>
+  <li><a href="{% url 'discordapp:playlist_list' %}">Discord Radio</a></li>
 
     {% if user.is_authenticated %}
         <div class="nav-user-info">
