--- a/code/wotwatcher/static/wot.css
+++ b/code/wotwatcher/static/wot.css
@@ -24,3 +24,17 @@ h2 {
   background-color: gray;
     color: white;
 }
+
+.examples {
+  display: flex;
+  margin: auto;
+}
+
+.example {
+  min-width: 150px;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  font-size: 20px;
+}
+
