--- a/code/wotwatcher/templates/wot_tanklist.html
+++ b/code/wotwatcher/templates/wot_tanklist.html
@@ -10,6 +10,16 @@
 <center>
     <a href="update"><button type="button">Update</button></a>
     <a href="add"><button type="button">Add tank</button></a>
+    <div class="examples">
+        <div class="example" style="background: #000000;">< 300</div>
+        <div class="example" style="background: #CF3230;">< 600</div>
+        <div class="example" style="background: #DC7500;">< 900</div>
+        <div class="example" style="background: #D8B502;">< 1250</div>
+        <div class="example" style="background: #6D9524;">< 1600</div>
+        <div class="example" style="background: #4C762E;">< 1900</div>
+        <div class="example" style="background: #4A92BA;">< 2350</div>
+        <div class="example" style="background: #84579C;">< 2900</div>
+    </div>
 <!--    {% for key, value in subs.items %}-->
 <!--        <a href="#{{key}}"><button class="tablinks">{{key}}</button></a>-->
 <!--    {% endfor %}-->
