--- a/code/discordapp/static/playlist_list.css
+++ b/code/discordapp/static/playlist_list.css
@@ -4,67 +4,76 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid black;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #99AAB5;
 }
 
 .playlist_list, .songs_list {
     padding: 10px;
 }
 
-a:link, a:visited {
+a {
   text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
+  color: white;
 }
 
 .songs_list {
   width: 50%;
 }
 
-aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  background-color: lightgray;
+button {
+    border: none;
+    font-size: 20px;
+    padding: 15px;
 }
 
 .normal_button {
   background-color: #4CAF50;
-  border: none;
   color: white;
-  padding: 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;
 }
 
-
 .disabled_button {
   background-color: #f44336;
-  border: none;
   color: white;
-  padding: 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+.sideplaylist {
+  float: right;
+  height: 100%;
+  width: 30%;
+  background-color: #2F3136;
+}
+
+.sideplaylist li {
+  text-decoration: none;
+  font-size: 25px;
+  display: block;
+}
+
+.sideplaylist li a {
+  padding: 4px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #FFFFFF;
+}
+
+.sideplaylist li:hover {
+  background-color: #42464D;
 }
