--- a/code/home/static/style.css
+++ b/code/home/static/style.css
@@ -1,46 +1,25 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+html {
+    height: 100%;
 }
-
-ul li {
-    float: left;
-}
-
-ul li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-ul li a:hover {
-    background-color: #111;
-}
-
-.nav-user-info {
-    float: right;
-}
-
-
-
 body {
+    height: 100%;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    color: black;
+    color: #EEEEEE;
+    background-color: #36393F;
 }
 
 #main_content {
-    width: 75%;
+    width: 70%;
     margin: auto;
     min-width: 1000px;
 }
 
-
+navbar {
+  display: grid;
+  float: left;
+  grid-gap: 20px;
+}
 
 .container {
   display: grid;
