--- a/code/home/templates/base.html
+++ b/code/home/templates/base.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>Mile Pogawedki</title>
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'navbar.css' %}">
     {% block extrahead %}{% endblock %}
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,13 @@
 </head>
 
 <body>
-    {% include "navbar.html" %}
+    <navbar>
+        {% include "navbar.html" %}
+        {% block navbar %}
+        {% endblock %}
+    </navbar>
+    {% block beforecontent %}
+    {% endblock %}
     <div id="main_content">
         {% block content %}
         {% endblock %}
